# hammock

./: .workon  Cargo.toml  README.md  Workspace.toml  notes.md
.kanban/: .conf.toml  board.toml  test.md
.kanban/backlog/: archive_projects.md  automatic_git_branch_when_moving_something_to_in_progress.md  card_match_prefixes_should_only_look_at_displayed_cards.md  display_board_columns_side_by_side.md  distraction_towards_progress.md  do_we_want_branching_kanban_boards.md  hammock_is_the_tui,_uh_is_the_cli.md  ls_that_is_hammock_aware.md  new_cards_go_in_to_do.md  tab_completion.md  track_move_history.md
.kanban/cards/: design_herd_style_commands.md  kanban.html  kanban.md  planning.md
.kanban/done/: hammockfile_and_workspace_goal.md  manual_edits_of_files_should_never_break_the_system.md  move_cards.md  print_card_contents.md  summarize_current_workspace_by_default.md
.kanban/in_progress/: hammockfile_and_workspace_goal.md  manual_ordering_of_cards.md
.kanban/to_do/: card_transitions.md  design_herd_style_commands.md  don't_save_blank_cards.md  dump_box.md  edit_card.md  hammock_as_saas_company.md  hmm_init.md  notes_tui.md  planning.md  rank_cards_in_columns.md  schedule_work_on_calendar_with_notifications.md  show_naive_schedule.md  track_move_history.md  write_post_on_my_org_system.md
docs/: kanban.md
hmm/: actions.go  card.go  go.mod  main.go  project.go  utils.go  workspace.go
projects/future-work/: Embedded-cards.md  (+7 more)
rust-src/: Cargo.toml  args.rs  main.rs  notes.rs  workspace.rs
src/: args.rs  main.rs  shell_functions.sh  utils.rs  workspace.rs
(+25 files in other folders)
