[package]
name = "hammock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
crossterm = { version = "0.26.1", features = ["serde"] }
gray_matter = "0.2.6"
serde = "1.0.162"
serde_derive = "1.0.162"
tempfile = "3.5.0"
toml = "0.7.3"
tui = "0.19.0"
